--- a/modified/misc/gallery.html
+++ b/modified/misc/gallery.html
@@ -139,49 +139,49 @@ https://templatemo.com/tm-542-new-vision
                     <figure class="effect-honey">
                         <img src="img/gallery-item-01.jpg" alt="Featured Item">
                         <figcaption>
-                            <h4><i><span>Best</span> HTML Template</i></h4>
+                            <h4><i><span>Caption</span> if possible</i></h4>
                         </figcaption>
                     </figure>
                     <figure class="effect-honey">
                         <img src="img/gallery-item-02.jpg" alt="Featured Item">
                         <figcaption>
-                            <h4><i><span>Top</span> CSS Theme</i></h4>
+                            <h4><i><span>Caption</span> if possible</i></h4>
                         </figcaption>
                     </figure>
                     <figure class="effect-honey">
                         <img src="img/gallery-item-03.jpg" alt="Featured Item">
                         <figcaption>
-                            <h4><i><span>Best</span> HTML Template</i></h4>
+                            <h4><i><span>Caption</span> if possible</i></h4>
                         </figcaption>
                     </figure>
                     <figure class="effect-honey">
                         <img src="img/gallery-item-04.jpg" alt="Featured Item">
                         <figcaption>
-                            <h4><i><span>Great</span> Web Theme</i></h4>
+                            <h4><i><span>Caption</span> if possible</i></h4>
                         </figcaption>
                     </figure>
                     <figure class="effect-honey">
                         <img src="img/gallery-item-05.jpg" alt="Featured Item">
                         <figcaption>
-                            <h4><i><span>Best</span> HTML Collection</i></h4>
+                            <h4><i><span>Caption</span> if possible</i></h4>
                         </figcaption>
                     </figure>
                     <figure class="effect-honey">
                         <img src="img/gallery-item-06.jpg" alt="Featured Item">
                         <figcaption>
-                            <h4><i><span>Max</span> CSS Layout</i></h4>
+                            <h4><i><span>Caption</span> if possible</i></h4>
                         </figcaption>
                     </figure>
                     <figure class="effect-honey">
                         <img src="img/gallery-item-07.jpg" alt="Featured Item">
                         <figcaption>
-                            <h4><i><span>Best</span> HTML Layout</i></h4>
+                            <h4><i><span>Caption</span> if possible</i></h4>
                         </figcaption>
                     </figure>
                     <figure class="effect-honey">
                         <img src="img/gallery-item-08.jpg" alt="Featured Item">
                         <figcaption>
-                            <h4><i><span>Best</span> CSS Template</i></h4>
+                            <h4><i><span>Caption</span> if possible</i></h4>
                         </figcaption>
                     </figure>
                 </div>
