--- a/modified/misc/gallery.html
+++ b/modified/misc/gallery.html
@@ -137,6 +137,12 @@ https://templatemo.com/tm-542-new-vision
                 <!-- Carousel -->
                 <div class="grid tm-carousel">
                     <figure class="effect-honey">
+                        <img src="../media/single-nun-large.jpeg" alt="Featured Item">
+                        <figcaption>
+                            <h4><i><span>Caption</span> if possible</i></h4>
+                        </figcaption>
+                    </figure>
+                    <figure class="effect-honey">
                         <img src="../media/2-nuns.jpg" alt="Featured Item">
                         <figcaption>
                             <h4><i><span>Caption</span> if possible</i></h4>
